--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
         <h1>2048</h1>
         <div class="nowScore">
           <p>SCORE</p>
-          <p class="score-num">0</p>
+          <p class="score-num" id="score">0</p>
         </div>
-        <div class="bestScore">
+        <!-- <div class="bestScore">
           <p>BEST</p>
-          <p class="score-num">0</p>
-        </div>
+          <p class="score-num" id="best">0</p>
+        </div> -->
       </section>
-      <section class="newGame">
-        New Game
-      </section>
+      <section class="newGame">New Game</section>
     </header>
     <section class="grid-container">
+      <section class="mes">
+          <h1>GAME OVER</h1>
+          <button id="tryAgain">Try Again</button>
+      </section>
       <section class="grid">
           <div class="grid-row">
             <div class="grid-cell-bg grid-cell-common"></div>
