--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>My-2048</title>
-  <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -56,7 +56,9 @@
       <section class="grid-above"></section>
     </section>
   </div>
+  <footer>Copyright (c) 2016 Copyright Jaywii All Rights Reserved.</footer>
   <script src="jquery.min.js" charset="utf-8"></script>
+  <script src="touch-0.2.14.min.js" charset="utf-8"></script>
   <script src="support.js" charset="utf-8"></script>
   <script src="animation.js" charset="utf-8"></script>
   <script src="main.js" charset="utf-8"></script>
