add mobile logo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <title>My-2048</title>
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <div style="display:none"><img src='apple-touch-icon.png' /></div>
   <div class="gameContainer">
     <header>
       <section class="score">
